# Wwise_MCP

./: pyproject.toml  requirements.txt
.codebuddy/: mcp.json
