[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wwise-mcp"
version = "1.0.0"
description = "Wwise 2024.1 AI Agent — MCP Server for Wwise Authoring Tool"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "waapi-client>=0.8.0",
    "pydantic>=2.0.0",
]

[project.scripts]
wwise-mcp = "wwise_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["wwise_mcp"]
